fix: fix scrollbar.

--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -1,3 +1,7 @@
+html{
+    scrollbar-width: none;
+}
+
 @media (min-width: 768px) {
     #sidebar {
         width: 240px;
